<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/digitalsafe" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Iniciar_sesión_bienvenida"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cornerRadius="12dp"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"/>
    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Registrase"
        android:textColor="@color/color_primario"
        android:gravity="center"
        />


</LinearLayout>